specs/ingress-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-server
  namespace: wisnewski-io
  labels:
    name: ingress-server
    part-of: wisnewski-io
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      name: ingress-server
      part-of: wisnewski-io
    template:
      metadata:
        labels:
          name: ingress-server
          part-of: wisnewski-io
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        cloud.google.com/gke-nodepool: wisnewski-ingress-pool-prod
      tolerations:
        - key: dedicated
          operator: Equal
          value: ingress
          effect: NoSchedule
      containers:
        - name: ingress-server
          image: us-east4-docker.pkg.dev/ngress-server-410905/wisnewski/ingress-server:v0.0.1
          ports:
            - name: https
              containerPort: 443
              hostPort: 443
            - name: http
              containerPort: 80
              hostPort: 80
          volumeMounts:
            - name: certificates
              mountPath: /certificates
              readOnly: true
      volumes:
        - name: certificates
          secret:
            secretName: certificates
