specs/kubeip-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeip
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeip
  template:
    metadata:
      labels:
        app: kubeip
    spec:
      priorityClassName: system-cluster-critical
      nodeSelector:
        cloud.google.com/gke-nodepool: wisnewski-app-pool-prod
      containers:
        - name: "kubeip"
          image: doitintl/kubeip:1.0.8
          imagePullPolicy: Always
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
      restartPolicy: Always
      serviceAccountName: wisnewski-kubeip-prod
      volumes:
        - name: google-cloud-key
          secret:
            secretName: kubeip-key
