specs/site-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
  namespace: wisnewski-io
  labels:
    app: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: wisnewski-app-pool-prod
      containers:
        - name: nick-wisnewski-io
          image: us-east4-docker.pkg.dev/nick-wisnewski-io-410905/wisnewski/nick-wisnewski-io:v0.0.7
          ports:
            - name: http
              containerPort: 8080
              hostPort: 8080
