specs/site-gke.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nick-wisnewski-io
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: nick-wisnewski-io
  template:
    metadata:
      labels:
        app: nick-wisnewski-io
    spec:
      containers:
        - name: nick-wisnewski-io
          image: us-east4-docker.pkg.dev/nick-wisnewski-io-410905/wisnewski/nick-wisnewski-io:v0.0.5
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nick-wisnewski-io-service
spec:
  selector:
    name: nick-wisnewski-io
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
