specs/site-service.yml
apiVersion: v1
kind: Service
metadata:
  name: site
  labels:
    app: site
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: site
